app/assets/stylesheets/2019/welcome.css.scss
body#acc2019 {  
  
  .navbar-brand {
    padding-left: 50px;
    padding-top: 20px;
    padding-bottom: 15px;
    background-image: url(image-path('camp.png'));
    background-repeat: no-repeat;
    background-position: -10% 100%;
    background-size: 30%;
  }
  
  #landing-img {
    width: 100%;
    height: 500px;
    background-image: url(image-path('landing_2019_dark.jpg'));
    background-size:  cover;
    background-repeat: no-repeat;
    background-position:  0% -25%;
    padding: 65px 50px;
    text-align: center;
    
    a#subscribe-now {
      font-size: 25px;
      font-weight: bold;
      margin-top: 10px;
    }
    
    h1 { 
      color: #FFF;
    } 
  }
  
  .header-effect {
    background-image: url(image-path("bg-header-bottom.png"));
    height: 43px;
  }
  
  #empty-background {
    height: 40px;
  }
  
  #proposal {
    text-align: center;
    padding: 40px;
  }
  
  #promisses {
    text-align: center;
    padding-left: 0px;
    li {
      list-style: none;
      float: left;
      
      div {
        background-color: #EFEEEA;
        margin: 40px;
        padding: 20px;
      }
      
      img {
        margin: 20px auto;
        display: block;
        width: 70px;
        height: 70px;
      }
    }
  } 
  
  .alternated {
    background-color: #EFEEEA;
  } 
  
  .image-div {
    margin: auto;
    padding: 0px 28px;
    top: -35px;
  }
  
  #unconf {
    padding-bottom: 40px;
  }
  
  .center {
    text-align: center;
  }
  
  #pomisses-div {
    margin-top: 40px;
  }
  
  #testmonials {
    h2 {
      text-align: center;
    }
  }
  
  ul#testmonials-list {
    list-style: none;
    padding: 0px;
    li:hover {
      background: white;
      img {
        border: 5px solid #6A974D;
      }
    }
    li {
      float: left;
      margin: 0px auto;
      padding: 20px;
      text-align: center;
      blockquote {
        padding-top: 20px;
        font-style: italic;
      }
      img {
        border-radius: 200px;
        border: 5px solid white;
        width: 200px;
      }
      h4 {
        color: black;
        font-weight: bolder;
      }
      p {
        font-weight: bold;
        color: #E9C44D;
        font-size: 14px;
      }
    }
  }
  
  #pricing {
    h2 {
      text-align: center;
      padding: 40px;
    }
    ul {
      padding: 0px;
      list-style: none;
      text-align: center;
      li:last-child {
        padding-bottom: 0px;
      }
      li {
        float: left;
        padding-bottom: 60px;
        padding-left: 0px;
        padding-right: 0px;
        p {
          margin-bottom:0px;
          height: 48px;
        }
        img {
          width: 328.32px;
        }
        
        .details-icon {
          background-color: white;
          width: 50px;
          height: 50px;
          margin-left: auto;
          margin-right: auto;
          margin-top: -25px;
          display: block;
          border-radius: 200px;
        }
        
        .price {
          color: #6A974D;
          font-weight: bolder;
          font-size: 20px;
        }
        
        .wrap:hover .overlay{
          opacity: 1;
        }
        div.wrap {
          position: relative;
          width: 100%;
        }
        
        p {
          text-align: center;
        }
        h4 {
          color: black;
          text-align: center;
          font-weight: bolder;
        }
      }
    }
  }
  
  #room-options {
    #room_title {
      background-color: #6A974D;
      h1 { 
        color: white;
        font-weight: bolder;
        padding: 100px;
        text-align: center;
      }
    }
  }
  
  #participants {
    h2 {
      text-align: center;
      padding: 50px;
    }
    ul {
      list-style: none;
      padding-left: 0px;
      li {
        padding-bottom: 35px;
        img {
          border-radius: 150px;
          margin: auto;
          width: 225px;
          display: block;
        }
      }
      a {
        display: block;
        text-align: center;
        color: #E9C44D;
        font-weight: bolder;
        font-size: 18px;
        margin-top: 15px;
      }
    }
  }
  
  #program {
    padding-bottom: 50px;
    h2 {
      text-align: center;
      padding-bottom: 50px;
    }
    
    ul {
      list-style: none;
      vertical-align: top;
      padding-left: 0px;
      li {
        float: left;
        margin: 0px auto;
        background-color: white;
        padding-bottom: 10px;
        margin-bottom: 20px;
        h3 {
          text-align: center;
          padding-top: 20px;
        }
        
        .program-detailed {
          list-style: none;
          
            line-height: 2em;
        
        }
      }
    }
  }
  
  #footer {
      padding: 70px 70px 0px 70px;
    
    h3 {
      font-size: 18px;
      font-weight: bolder;
    }
    
    ul {
      list-style: none;
      padding-left: 0px;
      
      img {
        width: 200px;
      }
    }
    
    ul#footer-section > li { 
      margin-bottom: 35px;
    }
  }
  
  #final-footer {
    text-align: center;
    padding-bottom: 40px;
  }
  
  .row {
    margin-right: 0px;
    margin-left: 0px;
  }
  
  .division {
    background-image: url(image-path('bg-footer.png'));
    height: 93px;
  }
  
 
  .submission {
    padding-top: 100px;
  }
  
  .right {
    text-align: right;
  }

  .submit-pp {
    font-size: 20px;
    font-weight: bolder;
    margin-top: -100px;
  }
  
  #criterias {
    h3 {
      display: block;
      text-align: center;
    }
    ul {
      list-style: none;
      padding-left: 0px;
      li {
        text-align: center;
        float: left;
        padding: 50px 15px;
        background: white;
        margin-top: 25px;
        margin-bottom: 25px;

        height: 380px;
        img {
          margin: auto;
          display: block;
          width: 100px;
          margin-bottom: 20px;
        }
      }
    }
  }
  
  #stages {
    h3 {
      text-align: center;
      padding: 40px;
    }
    ul {
      text-align: center;
      list-style: none;
      padding-left: 0px;
      li {
        display: block;
        width: 130px;
        margin: auto;
        span {
          font-size: 50px;
          display: block;
          text-align: center;
        }
      }
    }
  }
  
  #submit-now {
    background-image: url(image-path("resort-1.jpg"));
    height: 500px;
    text-align: center;
    a {
      font-size: 35px;
      margin: 400px 0px;
    }
  }
  
}

@media only screen and (min-width: 980px) {
  body#acc2019 #landing-img h1 {  
  text-align: center;
  font-size: 70px;
  }
  body#acc2019 #landing-img {
    padding: 130px 50px;
    button {
      margin-top: 20px;
    }
  }
  body#acc2019 .image-div {
    padding: 40px;
    top: 0px;
  }
  #pricing ul li {
    padding-bottom: 0px !important;
    margin: auto;
  }
  body#acc2019 ul#testmonials-list li {
    margin: 20px auto;
  }
  #footer {
    padding-top: 130px;
    padding-bottom: 30px;
  }
  #criterias {
    margin-right: 20px;
    margin-left: 20px;
    li {
      margin: 0px 25px;
    }
  }
  #stages {
    height: 370px;
    ul {
      li {
        margin: 0px 20px !important;
        float: left;
      }
    }
  }
}

